# Homework1_petr

./: CMakeLists.txt  package.xml
include/homework1_petr/: collector_node.hpp  mapper_node.hpp  start_server.hpp  status_node.hpp  turtle_info.hpp  turtles_spawner.hpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/homework1_petr/share/homework1_petr/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
launch/: run.launch.py
log/: latest_build
msg/: PoseArrayCustom.msg  TwistArray.msg
src/: collector_node.cpp  mapper_node.cpp  start_server.cpp  status_node.cpp  turtles_spawner.cpp
srv/: StartStop.srv
