<?xml version="2.0"?>
<package format="2">
  <name>homework1_petr</name>
  <version>0.0.1</version>
  <description>ROS2 package for homework1 by Petr - includes publisher, subscriber, service, client, and custom msgs/srvs.</description>

  <maintainer email="ogganesontennesin@gmail.com">Petr</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <depend>rosidl_default_generators</depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <!-- <exec_depend>rosidl_default_runtime</exec_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>